Fixed findbugs errors
svn path=/trunk/; revision=46202


Former-commit-id: 2947007f30a14d60368ad9a40c3f521b07b0f188